--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -20,4 +20,4 @@
 @import "./modals.scss";
 @import "./react-draft-wysiwyg.scss";
 @import "./rich-text-editor.scss";
-// @import "./progressBar.scss";
+@import "./progressBar.scss";
